# UDIF

./: CMakeLists.txt  License.txt  README.md
.github/: SECURITY.md
.github/workflows/: build.yml  codeql-analysis.yml
Source/: UDIF.sln
Source/BC/: BC.vcxproj  BC.vcxproj.filters  appbc.c
Source/GC/: GC.vcxproj  GC.vcxproj.filters  appgc.c
Source/Root/: Root.vcxproj  Root.vcxproj.filters  approot.c
Source/UA/: UA.vcxproj  UA.vcxproj.filters  appua.c
Source/UDIF/: UDIF.vcxproj  UDIF.vcxproj.filters  anchor.c  anchor.h  bc.c  bc.h  capability.c  capability.h  caphandler.c  capstore.c  capstore.h  certificate.c  certificate.h  certstore.c  certstore.h  commands.h  crypto.c  crypto.h  dispatch.c  dispatch.h  doxymain.h  entity.c  entity.h  event.c  event.h  gc.c  gc.h  handler.c  handler.h  help.c  help.h  logger.c  logger.h  mcelmanager.c  mcelmanager.h  menu.c  menu.h  message.c  message.h  object.c  (+30 more)
Source/UDIF Test/: UDIF Test.vcxproj  UDIF Test.vcxproj.filters  anchor_test.c  anchor_test.h  capability_test.c  capability_test.h  certificate_test.c  certificate_test.h  conformance_test.c  conformance_test.h  control_plane_test.c  control_plane_test.h  handler_conformance_test.c  handler_conformance_test.h  inter_domain_treaty_test.c  inter_domain_treaty_test.h  load_endurance_test.c  load_endurance_test.h  mcel_hierarchy_test.c  mcel_hierarchy_test.h  mcelmgr_test.c  mcelmgr_test.h  object_registry_transaction_test.c  object_registry_transaction_test.h  object_test.c  object_test.h  query_mechanism_test.c  query_mechanism_test.h  query_test.c  query_test.h  registry_test.c  registry_test.h  test_encode.c  test_kdf.c  test_logging.c  test_transport.c  treaty_test.c  treaty_test.h  tunnel_test.c  tunnel_test.h  (+5 more)
Source/URA/: URA.vcxproj  URA.vcxproj.filters  appura.c  appura.h
docs/: _saved_2certificate_8h.html  _saved_2certificate_8h.js  _saved_2certificate_8h_source.html  _saved_2commands_8h.html  _saved_2commands_8h.js  _saved_2commands_8h_source.html  _saved_2help_8h.html  _saved_2help_8h.js  _saved_2help_8h_source.html  _saved_2logger_8h.html  _saved_2logger_8h.js  _saved_2logger_8h_source.html  _saved_2menu_8h.html  _saved_2menu_8h.js  _saved_2menu_8h_source.html  _saved_2resources_8h.html  _saved_2resources_8h_source.html  _saved_2server_8h.html  _saved_2server_8h.js  _saved_2server_8h_source.html  _u_d_i_f_2certificate_8h.html  _u_d_i_f_2certificate_8h.js  _u_d_i_f_2certificate_8h_source.html  _u_d_i_f_2commands_8h.html  _u_d_i_f_2commands_8h.js  _u_d_i_f_2commands_8h_source.html  _u_d_i_f_2help_8h.html  _u_d_i_f_2help_8h.js  _u_d_i_f_2help_8h_source.html  _u_d_i_f_2logger_8h.html  _u_d_i_f_2logger_8h.js  _u_d_i_f_2logger_8h_source.html  _u_d_i_f_2menu_8h.html  _u_d_i_f_2menu_8h.js  _u_d_i_f_2menu_8h_source.html  _u_d_i_f_2resources_8h.html  _u_d_i_f_2resources_8h.js  _u_d_i_f_2resources_8h_source.html  _u_d_i_f_2server_8h.html  _u_d_i_f_2server_8h.js  (+418 more)
